<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buildbot Watcher</string>
    <string name="btn_builders">Builders</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="builder_empty">No build</string>
    <plurals name="builder_build_number">
        <item quantity="one">%d build</item>
        <item quantity="other">%d builds</item>
    </plurals>
    <string name="build_builder">Builder:</string>
    <string name="build_duration">Duration:</string>
    <string name="build_end">End:</string>
    <string name="build_failure">failed %s</string>
    <string name="build_not_finished">Build not finished</string>
    <string name="build_number">Number:</string>
    <string name="build_reason">Reason:</string>
    <string name="build_result">Result:</string>
    <string name="build_slave">Slave:</string>
    <string name="build_start">Start:</string>
    <string name="builder_state">State: %s</string>
    <string name="builders_empty">No builders</string>
    <string name="dlg_cnx_issue_title">Connection issue</string>
    <string name="dlg_cnx_issue">Check your network configuration.</string>
    <string name="dlg_cnx_issue_btn">OK</string>
    <string name="network_issue">Network issue</string>
    <string name="settings_net">Network</string>
    <string name="settings_host">Buildbot\'s host</string>
    <string name="settings_host_sum">Where to reach the Buildbot</string>
    <string name="settings_auth">Use authentication</string>
    <string name="settings_auth_login">Login</string>
    <string name="settings_auth_password">Password</string>
    <string name="settings_port">Buildbot\'s port</string>
    <string name="settings_port_sum">Which port Buildbot is listening</string>
    <string name="settings_ui">Look &amp; feel</string>
    <string name="settings_light_theme">Use a light theme</string>
    <string name="ftw_title">No buildbot configured yet</string>
    <string name="ftw_message">You don\'t have configured a buildbot yet. Do you want to do it now?</string>
    <string name="ftw_now">Configure it now</string>
    <string name="ftw_later">Configure it later</string>
</resources>
