<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    
    <TableRow
        android:id="@+id/result_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/result_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/build_result"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
    <TableRow
        android:id="@+id/builder_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/builder_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/build_builder"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/builder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
    <TableRow
        android:id="@+id/number_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/number_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/build_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
    <TableRow
        android:id="@+id/reason_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/reason_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/build_reason"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/reason"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
    <TableRow
        android:id="@+id/slave_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/slave_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/build_slave"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/slave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
    <TableRow
        android:id="@+id/start_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/start_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/build_start"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    

    <TableRow
        android:id="@+id/end_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/end_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/build_end"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>
    
    
    <TableRow
        android:id="@+id/duration_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/duration_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:text="@string/build_duration"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </TableRow>

</TableLayout>
